--- a/c05/index.html
+++ b/c05/index.html
@@ -9,13 +9,16 @@
   <body>
     <div id="container" class="container">
       <ul id="elements">
-        <li id="liWithText" class="hot">text inside 1 li</li>
-        <li id="liWithText" class="hot">text inside 2 li</li>
-        <li id="liWithText" class="hot">text inside 3 li</li>
-        <li id="liWithText" class="hot">text inside 4 li</li>
-        <li id="liWithText" class="hot">text inside 5 li</li>
-        <li id="liWithText" class="hot">text inside 6 li</li>
+        <li id="liWithText1" class="hot">text inside 1 li</li>
+        <li id="liWithText2" class="hot">text inside 2 li</li>
+        <li id="liWithText3" class="hot">
+          <em>text inside em</em> text inside 3 li
+        </li>
+        <li id="liWithText4" class="hot">text inside 4 li</li>
+        <li id="liWithText5" class="hot">text inside 5 li</li>
+        <li id="liWithText6" class="hot">text inside 6 li</li>
       </ul>
+      <p id="attributeName"></p>
     </div>
     <script src="js/script.js"></script>
   </body>
