--- a/events/index.html
+++ b/events/index.html
@@ -17,7 +17,7 @@
         <label for="password">Create a password:</label>
         <input type="password" id="password" />
 
-        <input type="submit" value="Sign up!" />
+        <input type="submit" value="Sign up!" class="submit" />
       </form>
     </div>
     <script src="js/script.js"></script>
